--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -406,7 +406,7 @@ $size: 1.2em;
 
 .model_views_type {
   padding: 0.5rem;
-  background-color: var(--card-bg);
+  background-color: var(--column-section-bg);
   border-radius: 6px;
   display: flex;
   align-items: center;
@@ -414,10 +414,10 @@ $size: 1.2em;
 }
 
 .modal_views_code_container {
-  padding: 0.5rem;
+  // padding: 0.5rem;
   background-color: var(--card-bg);
   border-radius: 6px;
-  gap: 0.25rem;
+  // gap: 0.25rem;
 }
 
 .close_button {
@@ -434,14 +434,15 @@ $size: 1.2em;
 }
 
 .code_editor_container {
-  background-color: #082247 !important;
+  background-color: #171717 !important;
   margin: 0 !important;
   padding: 0.25rem !important;
   flex-grow: 1;
+  border-radius: 6px;
 }
 
 .code_editor {
-  background-color: #082247 !important;
+  background-color: #171717 !important;
   padding: 0.5rem;
   width: 100%;
 }
