--- a/webview_panels/src/lib/altimate/main.css
+++ b/webview_panels/src/lib/altimate/main.css
@@ -2165,14 +2165,14 @@ code.highlight.source-code + span[id^="tooltip-"] {
   line-height: normal;
   color: #fff;
 }
-._table_node_16cyp_1 {
+._table_node_1hcko_1 {
   width: 272px;
   display: flex;
   flex-direction: column;
   cursor: default;
   color: var(--text-color);
 }
-._table_node_16cyp_1 ._header_16cyp_8 {
+._table_node_1hcko_1 ._header_1hcko_8 {
   background: var(--table-node-expand-bg);
   border-top: 2px solid var(--table-node-border-color);
   border-left: 2px solid var(--table-node-border-color);
@@ -2180,15 +2180,15 @@ code.highlight.source-code + span[id^="tooltip-"] {
   border-radius: 0.25em 0.25em 0 0;
   padding: 0.25em;
 }
-._table_node_16cyp_1 ._header_16cyp_8._collapse_16cyp_16 {
+._table_node_1hcko_1 ._header_1hcko_8._collapse_1hcko_16 {
   background: var(--table-node-collapse-bg);
   border-bottom: 2px solid var(--table-node-border-color);
   border-radius: 0.25em;
 }
-._table_node_16cyp_1 ._header_16cyp_8._selected_16cyp_21 {
+._table_node_1hcko_1 ._header_1hcko_8._selected_1hcko_21 {
   border-color: #e38e00;
 }
-._table_node_16cyp_1 ._content_16cyp_24 {
+._table_node_1hcko_1 ._content_1hcko_24 {
   flex-grow: 1;
   background: var(--table-node-content-bg);
   border-bottom: 2px solid var(--table-node-border-color);
@@ -2197,10 +2197,10 @@ code.highlight.source-code + span[id^="tooltip-"] {
   border-radius: 0 0 0.25em 0.25em;
   padding: 0.25em;
 }
-._table_node_16cyp_1 ._content_16cyp_24._selected_16cyp_21 {
+._table_node_1hcko_1 ._content_1hcko_24._selected_1hcko_21 {
   border-color: #e38e00;
 }
-._table_header_16cyp_37 {
+._table_header_1hcko_37 {
   display: grid;
   grid-template-columns: 3.2em 1fr;
   gap: 0em 0.5em;
@@ -2210,47 +2210,47 @@ code.highlight.source-code + span[id^="tooltip-"] {
   border-radius: 0.25em;
   border: 1px solid var(--table-node-border-color);
 }
-._table_header_16cyp_37 ._seed_16cyp_47 {
+._table_header_1hcko_37 ._seed_1hcko_47 {
   border: 1px solid rgba(1, 205, 140, 0.3);
   color: #01cd8c;
   background-color: #01cd8c1a;
 }
-._table_header_16cyp_37 ._model_16cyp_52 {
+._table_header_1hcko_37 ._model_1hcko_52 {
   border: 1px solid rgba(202, 232, 249, 0.3);
   color: #cae8f9;
   background-color: #cae8f91a;
 }
-._table_header_16cyp_37 ._source_16cyp_57 {
+._table_header_1hcko_37 ._source_1hcko_57 {
   border: 1px solid rgba(188, 226, 228, 0.3);
   color: #bce2e4;
   background-color: #bce2e41a;
 }
-._table_header_16cyp_37 ._exposure_16cyp_62 {
+._table_header_1hcko_37 ._exposure_1hcko_62 {
   border: 1px solid rgba(241, 180, 151, 0.3);
   color: #f1b497;
   background-color: #f1b4971a;
 }
-._table_header_16cyp_37 ._snapshot_16cyp_67 {
+._table_header_1hcko_37 ._snapshot_1hcko_67 {
   border: 1px solid rgba(245, 197, 240, 0.3);
   color: #f5c5f0;
   background-color: #f5c5f01a;
 }
-._table_header_16cyp_37 ._metrics_16cyp_72 {
+._table_header_1hcko_37 ._metrics_1hcko_72 {
   border: 1px solid rgba(199, 243, 192, 0.3);
   color: #c7f3c0;
   background-color: #c7f3c01a;
 }
-._table_header_16cyp_37 ._macros_16cyp_77 {
+._table_header_1hcko_37 ._macros_1hcko_77 {
   border: 1px solid rgba(221, 157, 165, 0.3);
   color: #dd9da5;
   background-color: #dd9da51a;
 }
-._table_header_16cyp_37 ._analysis_16cyp_82 {
+._table_header_1hcko_37 ._analysis_1hcko_82 {
   border: 1px solid rgba(255, 132, 136, 0.3);
   color: #ff8488;
   background-color: #ff84881a;
 }
-._table_header_16cyp_37 ._node_icon_16cyp_87 {
+._table_header_1hcko_37 ._node_icon_1hcko_87 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -2258,11 +2258,11 @@ code.highlight.source-code + span[id^="tooltip-"] {
   border-radius: 0.25em;
   font-size: 0.75em;
 }
-._table_header_16cyp_37 ._node_icon_16cyp_87 svg {
+._table_header_1hcko_37 ._node_icon_1hcko_87 svg {
   width: 2em;
   height: 2em;
 }
-._table_handle_16cyp_100 {
+._table_handle_1hcko_100 {
   width: 1.2em;
   height: 1.2em;
   line-height: 1.2em;
@@ -2275,7 +2275,7 @@ code.highlight.source-code + span[id^="tooltip-"] {
   align-items: end;
   cursor: default;
 }
-._see_more_node_16cyp_114 {
+._see_more_node_1hcko_114 {
   width: 272px;
   display: flex;
   background: var(--table-node-collapse-bg);
@@ -2285,7 +2285,7 @@ code.highlight.source-code + span[id^="tooltip-"] {
   cursor: default;
   color: var(--text-color);
 }
-._table_card_16cyp_125 {
+._table_card_1hcko_125 {
   width: 100%;
   overflow-x: hidden;
   border-radius: 0.25em;
@@ -2294,14 +2294,14 @@ code.highlight.source-code + span[id^="tooltip-"] {
   cursor: pointer;
   background-color: var(--card-bg);
 }
-._table_card_16cyp_125._selected_16cyp_21 {
+._table_card_1hcko_125._selected_1hcko_21 {
   border-color: #e38e00;
 }
-._table_card_16cyp_125._disabled_16cyp_137 {
+._table_card_1hcko_125._disabled_1hcko_137 {
   background-color: #e5e6e7;
   cursor: default;
 }
-._column_card_16cyp_142 {
+._column_card_1hcko_142 {
   display: flex;
   flex-direction: column;
   gap: 0.5em;
@@ -2310,19 +2310,19 @@ code.highlight.source-code + span[id^="tooltip-"] {
   border: 1px solid var(--card-border-color);
   background-color: var(--card-bg);
 }
-._column_card_16cyp_142._selected_16cyp_21 {
+._column_card_1hcko_142._selected_1hcko_21 {
   border-color: #e38e00;
 }
-._edit_icon_16cyp_155 {
+._edit_icon_1hcko_155 {
   width: 1.2rem;
   height: 1.2rem;
   color: #8390a3;
 }
-._edit_icon_16cyp_155:hover,
-._edit_icon_16cyp_155._active_16cyp_163 {
+._edit_icon_1hcko_155:hover,
+._edit_icon_1hcko_155._active_1hcko_163 {
   color: var(--primary-accent);
 }
-._expand_lineage_icon_16cyp_167 {
+._expand_lineage_icon_1hcko_167 {
   background-color: var(--primary-accent);
   padding: 0.25rem;
   border-radius: 0.25rem;
@@ -2330,24 +2330,24 @@ code.highlight.source-code + span[id^="tooltip-"] {
   justify-content: center;
   align-items: center;
 }
-._expand_lineage_icon_16cyp_167 svg {
+._expand_lineage_icon_1hcko_167 svg {
   width: 1rem;
   height: 1rem;
 }
-._processing_div_16cyp_180 {
+._processing_div_1hcko_180 {
   background-color: #fff;
 }
-._processing_div_16cyp_180 ._gif_img_16cyp_183 {
+._processing_div_1hcko_180 ._gif_img_1hcko_183 {
   max-width: 100%;
   max-height: 90%;
 }
-._card_16cyp_188 {
+._card_1hcko_188 {
   box-shadow: 0 1px 2px #38414a26;
   background-color: #fff;
   border-radius: 0.5rem;
   padding: 0.5rem;
 }
-._column_node_16cyp_195 {
+._column_node_1hcko_195 {
   border: 1px solid var(--primary-accent);
   width: 248px;
   border-radius: 0.25em;
@@ -2355,76 +2355,83 @@ code.highlight.source-code + span[id^="tooltip-"] {
   color: var(--column-node-color);
   position: relative;
 }
-._column_node_16cyp_195._default_16cyp_203 {
+._column_node_1hcko_195._default_1hcko_203 {
   background: var(--column-node-bg);
 }
-._column_node_16cyp_195 ._column_name_16cyp_206 {
+._column_node_1hcko_195 ._column_name_1hcko_206 {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
-._column_node_16cyp_195 ._column_badge_16cyp_211 {
+._column_node_1hcko_195 ._column_top_right_1hcko_211 {
   position: absolute;
   top: -6px;
   right: 4px;
-  background-color: var(--lens-color) !important;
-  font-size: 6px;
-  text-transform: capitalize;
-  width: 13px;
-  height: 13px;
-  line-height: 1.67;
+  display: flex;
+  gap: 0.25rem;
 }
-._divider_16cyp_223 {
+._column_node_1hcko_195 ._column_code_icon_1hcko_218 {
+  background-color: #082247 !important;
+  padding: 2px;
+  width: 12px;
+  height: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px;
+  cursor: pointer;
+}
+._divider_1hcko_230 {
   height: 2px;
   width: 100%;
   background-color: var(--card-border-color);
 }
-._table_details_header_16cyp_229 {
+._table_details_header_1hcko_236 {
   width: 100%;
   display: grid;
   grid-template-columns: 1.5rem 1fr;
   gap: 0em 0.5em;
   align-items: center;
 }
-._verticle_divider_16cyp_237 {
+._verticle_divider_1hcko_244 {
   width: 2px;
   background-color: #c4cad2;
 }
-._low_confidence_16cyp_242 {
+._low_confidence_1hcko_249 {
   padding: 0.125em 0.75em;
   border-radius: 0.375rem;
   background: #ff754c;
   color: #fff;
 }
-._high_confidence_16cyp_249 {
+._high_confidence_1hcko_256 {
   padding: 0.125em 0.75em;
   border-radius: 0.375rem;
   background: #327e36;
   color: #fff;
 }
-._alert_icon_16cyp_256 {
+._alert_icon_1hcko_263 {
   width: 1rem;
   height: 1rem;
   display: flex;
 }
-._menu_card_16cyp_262 {
+._menu_card_1hcko_269 {
   padding: 0.275em !important;
   font-size: 0.875em;
 }
-._menu_card_container_16cyp_267 {
+._menu_card_container_1hcko_274 {
   background-color: var(--background--02);
   border-color: var(--stroke--disable);
   padding: 1px;
   border-radius: 6px;
 }
-._table_details_tabs_16cyp_274 {
+._table_details_tabs_1hcko_281 {
   width: 100%;
   padding: 0.25em;
   border-radius: 0.5em;
   display: flex;
   background-color: var(--column-section-bg);
 }
-._table_details_tabs_16cyp_274 ._tab_16cyp_1 {
+._table_details_tabs_1hcko_281 ._tab_1hcko_1 {
   width: 100%;
   padding: 0.5em;
   border-radius: 0.5em;
@@ -2432,11 +2439,11 @@ code.highlight.source-code + span[id^="tooltip-"] {
   text-align: center;
   cursor: pointer;
 }
-._table_details_tabs_16cyp_274 ._tab_16cyp_1._selected_16cyp_21 {
+._table_details_tabs_1hcko_281 ._tab_1hcko_1._selected_1hcko_21 {
   background-color: var(--primary-accent);
   color: #fff;
 }
-._table_node_pill_16cyp_294 {
+._table_node_pill_1hcko_301 {
   display: flex;
   align-items: center;
   border-radius: 0.5em;
@@ -2446,39 +2453,39 @@ code.highlight.source-code + span[id^="tooltip-"] {
   background-color: var(--tag-bg);
   color: var(--text-color);
 }
-._table_node_pill_16cyp_294 ._icon_16cyp_304 {
+._table_node_pill_1hcko_301 ._icon_1hcko_311 {
   width: 1rem;
   height: 1rem;
   display: flex;
   align-items: center;
 }
-._node-checkbox_16cyp_311,
-._non_select_node_checkbox_16cyp_311,
-._select_node_checkbox_16cyp_311 {
+._node-checkbox_1hcko_318,
+._non_select_node_checkbox_1hcko_318,
+._select_node_checkbox_1hcko_318 {
   display: flex;
   align-items: start;
   gap: 0.5em;
   padding: 0.125em 0.5em;
   border-radius: 0.5em;
 }
-._select_node_checkbox_16cyp_311 {
+._select_node_checkbox_1hcko_318 {
   border: 2px solid var(--card-border-color);
 }
-._non_select_node_checkbox_16cyp_311 {
+._non_select_node_checkbox_1hcko_318 {
   border: 2px dashed var(--card-border-color);
 }
-._node_extra_info_16cyp_327 {
+._node_extra_info_1hcko_334 {
   height: 1.6em;
 }
-._help_body_16cyp_331,
-._feedback_body_16cyp_335 {
+._help_body_1hcko_338,
+._feedback_body_1hcko_342 {
   color: var(--text-grey2-color);
 }
-._feedback_body_16cyp_335 ._cancel_btn_16cyp_338 {
+._feedback_body_1hcko_342 ._cancel_btn_1hcko_345 {
   color: var(--text-grey-color);
   text-decoration: none;
 }
-._expand_nav_16cyp_343 {
+._expand_nav_1hcko_350 {
   border-radius: 4px;
   border: var(--table-node-border-color) solid 1px;
   display: flex;
@@ -2486,33 +2493,114 @@ code.highlight.source-code + span[id^="tooltip-"] {
   background-color: var(--bg-color);
   color: var(--text-color);
 }
-._expand_nav_16cyp_343 ._expand_nav_btn_16cyp_351 {
+._expand_nav_1hcko_350 ._expand_nav_btn_1hcko_358 {
   background-color: var(--popover-bg);
   border-radius: 4px;
   margin: 0.125em;
   display: flex;
   align-items: center;
 }
-._expand_nav_16cyp_343 ._expand_nav_btn_16cyp_351 ._divider_16cyp_223 {
+._expand_nav_1hcko_350 ._expand_nav_btn_1hcko_358 ._divider_1hcko_230 {
   height: 1.75em;
   width: 1px;
   background-color: var(--divider-color);
 }
-._expand_nav_16cyp_343 ._expand_nav_btn_16cyp_351 ._icon_16cyp_304 {
+._expand_nav_1hcko_350 ._expand_nav_btn_1hcko_358 ._icon_1hcko_311 {
   padding: 0.125em;
   cursor: pointer;
 }
-._expand_nav_16cyp_343 ._expand_nav_btn_16cyp_351 ._icon_16cyp_304 svg {
+._expand_nav_1hcko_350 ._expand_nav_btn_1hcko_358 ._icon_1hcko_311 svg {
   width: 1.5em;
   height: 1.5em;
 }
-._expand_nav_16cyp_343._disabled_16cyp_137 {
+._expand_nav_1hcko_350._disabled_1hcko_137 {
   opacity: 0.5;
 }
-._expand_nav_16cyp_343._disabled_16cyp_137 ._icon_16cyp_304 {
+._expand_nav_1hcko_350._disabled_1hcko_137 ._icon_1hcko_311 {
   cursor: default;
 }
-._lineage_legend_16cyp_378 {
+._column_legend_1hcko_402 ._dot_1hcko_415 {
+  width: 0.75rem;
+  height: 0.75rem;
+  border-radius: 50%;
+  display: inline-block;
+  vertical-align: text-bottom;
+  margin-right: 0.4rem;
+  color: #fff;
+  text-align: center;
+  font-size: 8px;
+}
+._model_views_type_1hcko_427 {
+  padding: 0.5rem;
+  background-color: var(--card-bg);
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+._modal_views_code_container_1hcko_436 {
+  padding: 0.5rem;
+  background-color: var(--card-bg);
+  border-radius: 6px;
+  gap: 0.25rem;
+}
+._close_button_1hcko_443 {
+  background-color: var(--primary-accent);
+  padding: 0.5rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+}
+._close_button_1hcko_443 svg {
+  width: 1rem;
+  height: 1rem;
+}
+._code_editor_container_1hcko_456 {
+  background-color: #082247 !important;
+  margin: 0 !important;
+  padding: 0.25rem !important;
+  flex-grow: 1;
+}
+._code_editor_1hcko_456 {
+  background-color: #082247 !important;
+  padding: 0.5rem;
+  width: 100%;
+}
+._tooltip_container_1hcko_469 {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+._tooltip_container_1hcko_469:hover ._tooltip_text_1hcko_475 {
+  display: block;
+}
+._tooltip_text_1hcko_475 {
+  display: none;
+  position: absolute;
+  bottom: 125%;
+  left: 50%;
+  transform: translate(-50%);
+  padding: 8px;
+  color: #fff;
+  border-radius: 4px;
+  white-space: nowrap;
+  background: #082247;
+}
+._views_type_badge_1hcko_492 {
+  background-color: var(--views-color) !important;
+  font-size: 8px;
+  padding: 2px;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  cursor: default;
+}
+._lineage_legend_1hcko_385 {
   position: absolute;
   bottom: 1rem;
   left: 3.5rem;
@@ -2524,33 +2612,33 @@ code.highlight.source-code + span[id^="tooltip-"] {
   font-size: 10px !important;
   padding: 6px !important;
 }
-._lineage_legend_16cyp_378 svg {
+._lineage_legend_1hcko_385 svg {
   margin-left: 0.6rem;
   vertical-align: baseline;
 }
-._column_legend_16cyp_395 .popover {
+._column_legend_1hcko_402 .popover {
   border-radius: 2px;
   background-color: #fff;
   text-transform: capitalize;
   border: 1px solid #d5dbe4;
 }
-._column_legend_16cyp_395 .popover .popover-body {
+._column_legend_1hcko_402 .popover .popover-body {
   padding: 0.5rem 1rem;
 }
-._column_legend_16cyp_395 .popover .popover-body > div {
+._column_legend_1hcko_402 .popover .popover-body > div {
   margin-bottom: 1rem;
   font-size: 10px;
 }
-._column_legend_16cyp_395 ._dot_16cyp_408 {
-  width: 0.75rem;
-  height: 0.75rem;
-  border-radius: 50%;
-  display: inline-block;
-  vertical-align: text-bottom;
-  margin-right: 0.4rem;
-  color: #fff;
-  text-align: center;
-  font-size: 8px;
+._column_code_icon_1hcko_218 {
+  background-color: #082247 !important;
+  padding: 2px;
+  width: 12px;
+  height: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px;
+  cursor: pointer;
 }
 .sidebar-modal {
   position: fixed;
@@ -3067,6 +3155,10 @@ code.highlight.source-code + span[id^="tooltip-"] {
   --popover-bg: #28292c;
   --divider-color: #424750;
 }
+body.vscode-dark .bs-modal {
+  --bs-modal-bg: #28292c !important;
+  --bs-modal-color: #ffffff !important;
+}
 .position-relative {
   position: relative;
 }
@@ -3191,4 +3283,105 @@ code.highlight.source-code + span[id^="tooltip-"] {
 }
 .theme-bg {
   background-color: var(--bg-color) !important;
+}
+code[class*="language-"],
+pre[class*="language-"] {
+  color: #ccc;
+  background: none;
+  font-family:
+    Consolas,
+    Monaco,
+    Andale Mono,
+    Ubuntu Mono,
+    monospace;
+  font-size: 1em;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+}
+pre[class*="language-"] {
+  padding: 1em;
+  margin: 0.5em 0;
+  overflow: auto;
+}
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background: #2d2d2d;
+}
+:not(pre) > code[class*="language-"] {
+  padding: 0.1em;
+  border-radius: 0.3em;
+  white-space: normal;
+}
+.token.comment,
+.token.block-comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: #999;
+}
+.token.punctuation {
+  color: #ccc;
+}
+.token.tag,
+.token.attr-name,
+.token.namespace,
+.token.deleted {
+  color: #e2777a;
+}
+.token.function-name {
+  color: #6196cc;
+}
+.token.boolean,
+.token.number,
+.token.function {
+  color: #f08d49;
+}
+.token.property,
+.token.class-name,
+.token.constant,
+.token.symbol {
+  color: #f8c555;
+}
+.token.selector,
+.token.important,
+.token.atrule,
+.token.keyword,
+.token.builtin {
+  color: #cc99cd;
+}
+.token.string,
+.token.char,
+.token.attr-value,
+.token.regex,
+.token.variable {
+  color: #7ec699;
+}
+.token.operator,
+.token.entity,
+.token.url {
+  color: #67cdcc;
+}
+.token.important,
+.token.bold {
+  font-weight: 700;
+}
+.token.italic {
+  font-style: italic;
+}
+.token.entity {
+  cursor: help;
+}
+.token.inserted {
+  color: green;
 }
