--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -445,4 +445,5 @@ $size: 1.2em;
   background-color: var(--code-bg) !important;
   padding: 0.5rem;
   width: 100%;
+  line-height: 2 !important;
 }
