--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -23,6 +23,7 @@ html {
   --modal-bg: #ffffff;
   --popover-bg: #ffffff;
   --divider-color: #e8e8e8;
+  --code-bg: #082247;
 }
 
 html[data-theme="dark"] {
@@ -50,6 +51,12 @@ html[data-theme="dark"] {
   --modal-bg: #484e55;
   --popover-bg: #28292c;
   --divider-color: #424750;
+  --code-bg: #171717;
+}
+
+html[data-theme="dark"] .bs-modal {
+  --bs-modal-bg: #252526 !important;
+  --bs-modal-color: #ffffff !important;
 }
 
 body {
@@ -170,6 +177,10 @@ body {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-default {
+  cursor: default;
 }
 
 .tooltip-container {
