--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -211,23 +211,31 @@ $size: 1.2em;
     background: var(--column-node-bg);
   }
 
-  .column_name{
+  .column_name {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
   }
 
-  .column_badge{
+  .column_top_right {
     position: absolute;
     top: -6px;
     right: 4px;
-    background-color: var(--lens-color) !important;
-    font-size: 6px;
-    text-transform: capitalize;
-    width: 13px;
-    height: 13px;
-    line-height: 1.67;
-  }  
+    display: flex;
+    gap: 0.25rem;
+  }
+
+  .column_code_icon {
+    background-color: #082247 !important;
+    padding: 2px;
+    width: 12px;
+    height: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    cursor: pointer;
+  }
 }
 
 .divider {
@@ -395,46 +403,47 @@ $size: 1.2em;
     }
   }
 }
-.lineage_legend {
-  position: absolute;
-  bottom: 1rem;
-  left: 3.5rem;
-  z-index: 4;
-  background-color: var(--card-bg) !important;
-  color: var(--text-color) !important;
-  border: 1px solid var(--input-border-color) !important;
-  border-radius: 5px !important;
-  font-size: 10px !important;
-  padding: 6px !important;
 
-  svg{
-    margin-left: 0.6rem;
-    vertical-align: baseline;
+.model_views_type {
+  padding: 0.5rem;
+  background-color: var(--column-section-bg);
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.modal_views_code_container {
+  // padding: 0.5rem;
+  background-color: var(--card-bg);
+  border-radius: 6px;
+  // gap: 0.25rem;
+}
+
+.close_button {
+  background-color: var(--primary-accent);
+  padding: 0.5rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  svg {
+    width: 1rem;
+    height: 1rem;
   }
 }
 
-.column_legend {
-  :global .popover {
-    border-radius: 2px;
-    background-color: #ffffff;
-    text-transform: capitalize;
-    border: 1px solid #D5DBE4;
-  :global .popover-body {
-    padding: 0.5rem 1rem;
-  > div{
-    margin-bottom: 1rem;
-    font-size: 10px;
-  }}
-  }
-  .dot {
-    width: 0.75rem;
-    height: 0.75rem;
-    border-radius: 50%;
-    display: inline-block;
-    vertical-align: text-bottom;
-    margin-right: 0.4rem;
-    color: #fff;
-    text-align: center;
-    font-size: 8px;
-  }
-}        
+.code_editor_container {
+  background-color: var(--code-bg) !important;
+  margin: 0 !important;
+  padding: 0.25rem !important;
+  flex-grow: 1;
+  border-radius: 6px;
+}
+
+.code_editor {
+  background-color: var(--code-bg) !important;
+  padding: 0.5rem;
+  width: 100%;
+  line-height: 2 !important;
+}
