--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -183,6 +183,10 @@ body {
   cursor: default;
 }
 
+.cursor-disable {
+  cursor: not-allowed;
+}
+
 .tooltip-container {
   position: relative;
   display: flex;
@@ -222,4 +226,11 @@ body {
 
 .theme-bg {
   background-color: var(--bg-color) !important;
+}
+
+pre[class*="language-"],
+code[class*="language-"] {
+  white-space: normal;
+  overflow: auto;
+  word-break: break-word;
 }
