--- a/webview_panels/src/main.scss
+++ b/webview_panels/src/main.scss
@@ -164,3 +164,13 @@ code {
   overflow-x: hidden;
   white-space: nowrap;
 }
+
+.new-feature{
+  background: rgb(255, 105, 74);
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -4px;
+  right: -4px;
+}
