fix: delete bookmark

--- a/webview_panels/src/modules/queryPanel/querypanel.module.scss
+++ b/webview_panels/src/modules/queryPanel/querypanel.module.scss
@@ -53,6 +53,7 @@
         > div:last-child {
           button {
             display: inline-block;
+            color: var(--text-color--title)
           }
         }
       }
