--- a/webview_panels/src/modules/queryPanel/querypanel.module.scss
+++ b/webview_panels/src/modules/queryPanel/querypanel.module.scss
@@ -36,17 +36,21 @@
     flex-direction: column;
     text-align: center;
     padding: 2rem;
-    svg {
+    :global .no-results{
       background-color: var(--background--base);
       border-radius: 50%;
-      padding: 0.5rem;
-      box-sizing: content-box;
+      height: 100px;
+      width: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
   .queryTwoCol {
     display: flex;
     align-items: flex-start;
     gap: 2rem;
+    max-height: 100%;
     .historyDetails {
       position: relative;
       width: 400px;
@@ -56,6 +60,7 @@
       padding: 1rem;
       border-radius: 10px;
       border-top-left-radius: 0;
+      max-height: 100%;
 
       .closeBtn{
         position: absolute;
@@ -95,6 +100,12 @@
       background-color: var(--background--01);
       border-radius: 5px;
 
+      [class*="_accordion_"] {
+        max-height: 300px;
+        overflow-y: overlay;
+        scrollbar-width: thin;
+      }
+
       header {
         padding: 0.5rem 1rem 0 1rem;
         border-bottom: 1px solid var(--stroke--default);
@@ -107,13 +118,16 @@
           color: var(--text-color--title);
           margin-bottom: 1rem;
           border-radius: 4px;
-          border: none;
+          border: 1px solid transparent;
           display: flex;
           justify-content: space-between;
           align-items: center;
           cursor: pointer;
           padding: 4px 0.5rem;
           min-height: 2.5rem;
+          &:hover {
+            border-color: var(--primary-color);
+          }
 
           > div:first-child {
             text-overflow: ellipsis;
@@ -135,7 +149,7 @@
             }
             button {
               display: none;
-              padding: 2px 4px;
+              padding: 1px 4px;
             }
           }
 
@@ -159,7 +173,6 @@
 
   [class*="-control"] {
     min-height: 28px;
-    height: 28px;
     align-items: start;
 
     [class*="-indicatorContainer"] {
