fix: overllaping issue

--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -234,3 +234,11 @@ code[class*="language-"] {
   overflow: auto;
   word-break: break-word;
 }
+
+.react-flow__node {
+  z-index: -2 !important;
+}
+
+.react-flow__edge {
+  z-index: -1 !important;
+}
