chore: feedback and remove hint interval check

--- a/webview_panels/src/modules/queryPanel/querypanel.module.scss
+++ b/webview_panels/src/modules/queryPanel/querypanel.module.scss
@@ -23,6 +23,8 @@
   .loader {
     justify-content: center;
     align-items: center;
+    height: 100%;
+    margin-top: -1rem;
 
     img {
       width: 10rem;
