--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -446,3 +446,66 @@ $size: 1.2em;
   display: flex;
   align-items: center;
 }
+
+.static_table_node {
+  width: $node-width;
+  display: flex;
+  flex-direction: column;
+  cursor: default;
+  color: var(--text-color);
+
+  .header {
+    background: var(--table-node-expand-bg);
+    border-top: 2px solid var(--table-node-border-color);
+    border-left: 2px solid var(--table-node-border-color);
+    border-right: 2px solid var(--table-node-border-color);
+    border-radius: 0.25em 0.25em 0 0;
+    &.collapse {
+      background: var(--table-node-collapse-bg);
+      border-bottom: 2px solid var(--table-node-border-color);
+      border-radius: 0.25em;
+    }
+    &.selected {
+      border-color: #e38e00;
+    }
+  }
+
+  .node_icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.15em 0.5em;
+    border-radius: 0.25em;
+
+    svg {
+      $size: 2em;
+      width: $size;
+      height: $size;
+    }
+    font-size: 0.75em;
+  }
+
+  .content {
+    flex-grow: 1;
+    background: var(--table-node-content-bg);
+    border-bottom: 2px solid var(--table-node-border-color);
+    border-left: 2px solid var(--table-node-border-color);
+    border-right: 2px solid var(--table-node-border-color);
+    border-radius: 0 0 0.25em 0.25em;
+    padding: 0.25em;
+    &.selected {
+      border-color: #e38e00;
+    }
+  }
+
+  .details_btn {
+    background-color: #374c6a;
+    border-radius: 50%;
+    width: 1.25rem;
+    height: 1.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.2rem;
+  }
+}
