--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -499,7 +499,6 @@ $size: 1.2em;
   }
 
   .details_btn {
-    background-color: #374c6a;
     border-radius: 50%;
     width: 1.25rem;
     height: 1.25rem;
@@ -507,5 +506,17 @@ $size: 1.2em;
     justify-content: center;
     align-items: center;
     padding: 0.2rem;
+
+    &.enable {
+      background-color: var(--primary-accent);
+      cursor: pointer;
+      color: #ffffff;
+    }
+
+    &.disable {
+      background-color: var(--btn-disable);
+      color: var(--btn-disable-text);
+      cursor: not-allowed;
+    }
   }
 }
