--- a/webview_panels/src/modules/queryPanel/components/perspective/perspective.module.scss
+++ b/webview_panels/src/modules/queryPanel/components/perspective/perspective.module.scss
@@ -1,8 +1,9 @@
 .altimatePerspectiveViewer {
-  height: 100%; 
+  height: 100%;
   font-size: 1.25rem !important;
-  
-  &[theme="Vintage"]{
+  --plugin--background: var(--background--base) !important;
+
+  &[theme="Vintage"] {
     font-family: var(--bs-body-font-family) !important;
     width: auto;
     --plugin--background: var(--background--base);
