--- a/new_lineage_panel/src/components/styles.module.scss
+++ b/new_lineage_panel/src/components/styles.module.scss
@@ -4,16 +4,19 @@
   align-items: center;
 }
 
-.tooltip_container:hover .tooltip_text {
+.tooltip_container:hover .tooltip {
   display: block;
 }
 
-.tooltip_text {
+.tooltip {
   display: none;
   position: absolute;
   bottom: 125%;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.tooltip_text {
   padding: 8px;
   color: #ffffff;
   border-radius: 4px;
@@ -100,7 +103,7 @@
   div {
     height: 2px;
     width: 12px;
-    border-top: dashed 1px #E38E00;
+    border-top: dashed 1px #e38e00;
   }
 }
 
