--- a/webview_panels/src/modules/queryPanel/querypanel.module.scss
+++ b/webview_panels/src/modules/queryPanel/querypanel.module.scss
@@ -8,6 +8,7 @@
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
+  overflow-y: overlay;
 
   :global .nav-link {
     cursor: pointer;
@@ -22,9 +23,166 @@
   .loader {
     justify-content: center;
     align-items: center;
+    height: 100%;
+    margin-top: -1rem;
 
     img {
       width: 10rem;
     }
   }
+
+  .noBookmark {
+    min-height: 200px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 2rem;
+    :global .no-results{
+      background-color: var(--background--base);
+      border-radius: 50%;
+      height: 100px;
+      width: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  .queryTwoCol {
+    display: flex;
+    align-items: flex-start;
+    gap: 2rem;
+    max-height: 100%;
+    .historyDetails {
+      position: relative;
+      width: 400px;
+      display: flex;
+      flex-direction: column;
+      background-color: var(--background--02);
+      padding: 1rem;
+      border-radius: 10px;
+      border-top-left-radius: 0;
+      max-height: 100%;
+
+      .closeBtn{
+        position: absolute;
+        top: 0;
+        left: -22px;
+        padding: 2px 3px;
+        border-radius: 0;
+      }
+      :global .card {
+        margin-top: 1rem !important;
+      }
+      :global .card-title {
+        padding-bottom: 0.5rem;
+        margin-bottom: 0;
+        padding-left: 0.5rem;
+        padding-top: 0.5rem;
+      }
+      pre {
+        border: none !important;
+      }
+      :global .stack-row {
+        justify-content: space-between;
+      }
+    }
+    .limitWidth {
+      max-width: 100%;
+      min-width: 0;
+      flex: 1;
+    }
+    @media (min-width: 1400px) {
+      .limitWidth {
+        max-width: 1440px;
+      }
+    }
+
+    .queryHistoryList {
+      background-color: var(--background--01);
+      border-radius: 5px;
+
+      [class*="_accordion_"] {
+        max-height: 300px;
+        overflow-y: overlay;
+        scrollbar-width: thin;
+      }
+
+      header {
+        padding: 0.5rem 1rem 0 1rem;
+        border-bottom: 1px solid var(--stroke--default);
+      }
+      :global .list-group {
+        border-radius: 0;
+        padding: 1rem;
+        :global .list-group-item {
+          background-color: var(--background--base);
+          color: var(--text-color--title);
+          margin-bottom: 1rem;
+          border-radius: 4px;
+          border: 1px solid transparent;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          cursor: pointer;
+          padding: 4px 0.5rem;
+          min-height: 2.5rem;
+          &:hover {
+            border-color: var(--primary-color);
+          }
+
+          > div:first-child {
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            flex: 1;
+            max-width: 60%;
+
+            .codicon {
+              color: #89d185;
+              margin-right: 0.5rem;
+            }
+          }
+
+          > div:last-child {
+            gap: 2px;
+            span {
+              vertical-align: bottom;
+            }
+            button {
+              display: none;
+              padding: 1px 4px;
+            }
+          }
+
+          &:hover {
+            > div:last-child {
+              button {
+                display: inline-block;
+                color: var(--text-color--title);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.selectControl {
+  border: 1px solid var(--stroke--disable);
+  border-radius: 5px;
+
+  [class*="-control"] {
+    min-height: 28px;
+    align-items: start;
+
+    [class*="-indicatorContainer"] {
+      padding: 4px;
+    }
+  }
+}
+
+.searchInput::-webkit-search-cancel-button {
+  display: none;
 }
